--- a/assets/scss/partials/_board.scss
+++ b/assets/scss/partials/_board.scss
@@ -292,6 +292,7 @@ body {
     height: 30vh!important;
     background-color: #ff6600;
     color: white;
+    text-align: center;
 }
 
 @for $i from 1 through 18 {
